services/average_shade/kubernetes/average-shade.pod.yml
apiVersion: v1
kind: Pod
metadata:
  # This name uniquely identifies the pod
  name: average-shade-pod
  labels:
    app: average-shade
spec:
  containers:
  - name: average-shade
    image: ghcr.io/csia-pme/csia-pme-average-shade:sha-2026f89
    ports:
    - name: http
      containerPort: 80
