services/average_shade/kubernetes/average-shade.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: average-shade-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "16m"
    nginx.org/client-max-body-size: "16m"
spec:
  rules:
  - host: average-shade-csia-pme.kube.isc.heia-fr.ch
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: average-shade-service
            port:
              number: 80
  tls:
    - hosts:
        - average-shade-csia-pme.kube.isc.heia-fr.ch
